--- a/lab1/app/templates/post.html
+++ b/lab1/app/templates/post.html
@@ -23,7 +23,7 @@
             </div>
             <div class="flex-grow-1 ms-3">
                 <h5>{{ comment.author }}</h5>
-                <p>{{ post.text }}</p>
+                <p>{{ comment.text }}</p>
 
                 {% for reply in comment.replies %}
                 <div class="d-flex mt-4">
