--- a/lab4/app/templates/users/index.html
+++ b/lab4/app/templates/users/index.html
@@ -26,6 +26,7 @@
                             <button type="button" class="btn btn-danger" data-url="{{ url_for('delete', user_id=user.id) }}" data-bs-toggle="modal" data-bs-target="#delete-user-modal">
                                 Удалить
                             </button>
+                            <a class="btn btn-info" href="{{ url_for('new_pass', user_id=user.id) }}">Изменить пароль</a>
                         {% endif %}
                     </div>
                 </td>
