--- a/lab5/app/templates/visits/base.html
+++ b/lab5/app/templates/visits/base.html
@@ -7,13 +7,13 @@
     <li class="nav-item">
         <a class="nav-link {% if request.endpoint == 'visits.logs' %}active{% endif %}" aria-current="page" href="{{ url_for('visits.logs') }}">Журнал посещений</a>
     </li>
-    {% if current_user.is_admin %}
+    {% if current_user.can('view_stat') %}
         <li class="nav-item">
             <a class="nav-link {% if request.endpoint == 'visits.pages_stat' %}active{% endif %}" href="{{ url_for('visits.pages_stat') }}">Статистика по страницам</a>
         </li>
     {% endif %}
 
-    {% if current_user.is_admin %}
+    {% if current_user.can('view_stat') %}
         <li class="nav-item">
             <a class="nav-link {% if request.endpoint == 'visits.users_stat' %}active{% endif %}" href="{{ url_for('visits.users_stat') }}">Статистика по пользователям</a>
         </li>
